...
          tabBarButtonTestID: 'fapulous-tab',
        }}
      />
      <Tabs.Screen
        name="user"
        options={{
          title: 'You',
          headerShown: false,
          tabBarIcon: ({ color }) => (
            <AnimatedUserIcon color={color} routeName="user" />
          ),
          tabBarButtonTestID: 'user-tab',
        }}
      />
    </Tabs>
  );
}

