{
  "onboarding": {
    "message": "Welcome to obytes app site"
  },
  "settings": {
    "about": "About",
    "app_name": "App Name",
    "arabic": "Arabic",
    "discord": "Discord",
    "english": "English",
    "generale": "General",
    "github": "Github",
    "language": "Language",
    "links": "Links",
    "logout": "Logout",
    "more": "More",
    "privacy": "Privacy Policy",
    "rate": "Rate",
    "share": "Share",
    "support": "Support",
    "support_us": "Support Us",
    "terms": "Terms of Service",
    "theme": {
      "dark": "Dark",
      "light": "Light",
      "system": "System",
      "title": "Theme"
    },
    "title": "Settings",
    "version": "Version",
    "website": "Website"
  },
  "welcome": "Welcome to obytes app site"
}
